syntax = "proto3";

import "Protos/common.proto";

option csharp_namespace = "__CAMEL_NAME__ServiceClient";

package __CAMEL_NAME__Service;

service __CAMEL_NAME__Service
{ 
    rpc ExampleMessage (ExampleRequest) returns (commons.protos.MessageResponse);
}

message ExampleRequest
{
  string message = 1;
}